15923
I expected this varargs invocation to work:
```scala
Welcome to Scala version 2.8.1.final

scala> def foo(ns: Int*) = ns.sum
foo: (ns: Int*)Int

scala> val more = Seq(3, 4)
more: Seq[Int] = List(3, 4)

scala> foo(1, 2, more: _*)
<console>:8: error: no `: _*' annotation allowed here
(such annotations are only allowed in arguments to *-parameters)
       foo(1, 2, more: _*)
                     ^
```

well, I can always do:
```scala
scala> foo(1 +: 2 +: more: _*)
res2: Int = 10
```

but that's not as nice.

(is this minor enough it wouldn't need a SIP? not sure)
